--- a/WindowMPStart.xaml
+++ b/WindowMPStart.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:Tic_Tac_Toe_WPF_Remake"
         mc:Ignorable="d"
         Title="Мультиплеер" Height="268.697" Width="456.697" Topmost="True">
+    <Window.Resources>
+        <local:IntToColorConverter x:Key="IntToColorConverter"/>
+    </Window.Resources>
     <Grid>
         <TabControl x:Name="tabControl" RenderTransformOrigin="0.5,0.5" Background="White">
             <TabItem Header="Общие настройки">
@@ -24,8 +27,13 @@
                             <DataGridTextColumn Binding="{Binding ServerName}" Header="Название сервера"/>
                             <DataGridTextColumn Binding="{Binding Name}" ClipboardContentBinding="{x:Null}" Header="Имя игрока"/>
                             <DataGridTextColumn Binding="{x:Null}" ClipboardContentBinding="{x:Null}" Header="Уровень"/>
-                            <DataGridTextColumn x:Name="ColumnColor" Binding="{Binding Color}" ClipboardContentBinding="{x:Null}" Header="Цвет"/>
-                            <DataGridTemplateColumn  x:Name="ColumnColor2" ClipboardContentBinding="{x:Null}" Header="Цвет"/>
+                            <DataGridTemplateColumn x:Name="ColumnColor" Header="Цвет">
+                                <DataGridTemplateColumn.CellStyle>
+                                    <Style TargetType="{x:Type DataGridCell}">
+                                        <Setter Property="Background" Value="{Binding Color, Converter = {StaticResource IntToColorConverter}}"/>
+                                    </Style>
+                                </DataGridTemplateColumn.CellStyle>
+                            </DataGridTemplateColumn>
                             <DataGridTextColumn Binding="{Binding IP}" ClipboardContentBinding="{x:Null}" Header="Адрес сервера"/>
                         </DataGrid.Columns>
                     </DataGrid>
@@ -35,7 +43,7 @@
                             <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
                         <Button x:Name="buttonRefresh" Content="Обновить" Margin="10,5" Click="buttonRefresh_Click"/>
-                        <Button x:Name="buttonConnect" Content="Подключиться" Margin="10,5" Grid.Column="1"/>
+                        <Button x:Name="buttonConnect" Content="Подключиться" Margin="10,5" Grid.Column="1" IsEnabled="False"/>
                     </Grid>
                 </Grid>
             </TabItem>
