--- a/WindowMPStart.xaml
+++ b/WindowMPStart.xaml
@@ -14,7 +14,7 @@
             <TabItem Header="Общие настройки">
                 <Grid>
                     <Label Content="Ник:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="textBoxNick" Height="23" Margin="29,36,191,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" GotFocus="textBoxNick_GotFocus"/>
+                    <TextBox x:Name="textBoxNick" Height="23" Margin="29,36,191,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" GotFocus="textBoxNick_GotFocus" KeyUp="textBoxNick_KeyUp"/>
                     <Label x:Name="label1" Content="Цвет:" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top"/>
                     <Rectangle x:Name="RectColor" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="20" Margin="29,90,0,0" Stroke="Black" VerticalAlignment="Top" Width="75" MouseLeftButtonDown="SelectColor_Click"/>
                     <Button x:Name="buttonSettings" Content="Все настройки" Margin="10,0,10,10" Height="20" VerticalAlignment="Bottom" Click="buttonSettings_Click"/>
@@ -43,16 +43,17 @@
                             <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
                         <Button x:Name="buttonRefresh" Content="Обновить" Margin="10,5" Click="buttonRefresh_Click"/>
-                        <Button x:Name="buttonConnect" Content="Подключиться" Margin="10,5" Grid.Column="1" IsEnabled="False"/>
+                        <Button x:Name="buttonConnect" Content="Подключиться" Margin="10,5" Grid.Column="1" IsEnabled="False" Click="buttonConnect_Click"/>
                     </Grid>
                 </Grid>
             </TabItem>
             <TabItem Header="Создание сервера">
                 <Grid>
                     <Label Content="Название сервера:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="115"/>
-                    <TextBox x:Name="textBoxServername" Height="23" Margin="29,36,191,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top"/>
-                    <Button x:Name="buttonStartServer" Content="Создать сервер" Margin="0,64,10,0" HorizontalAlignment="Right" Width="110" Height="20" VerticalAlignment="Top"/>
-                    <Button x:Name="buttonStopServer" Content="Отключить сервер" Margin="0,0,10,10" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="110"/>
+                    <TextBox x:Name="textBoxServerName" Height="23" Margin="29,36,191,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" GotFocus="textBoxServername_GotFocus" LostFocus="textBoxServername_LostFocus" KeyUp="textBoxServername_KeyUp"/>
+                    <Button x:Name="buttonStartServer" Content="Создать сервер" Margin="0,64,10,0" HorizontalAlignment="Right" Width="110" Height="20" VerticalAlignment="Top" Click="buttonStartServer_Click"/>
+                    <Button x:Name="buttonStopServer" Content="Отключить сервер" Margin="0,0,10,10" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="110" Click="buttonStopServer_Click"/>
+                    <TextBox x:Name="textBoxServerLog" Margin="10,64,125,10" TextWrapping="Wrap" Text="TextBox"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Подключение">
@@ -64,7 +65,7 @@
                     <Label Content="Игрок 2:" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="labelPlayer2" Content="Сервер:" Margin="53,150,10,0" VerticalAlignment="Top"/>
                     <Rectangle x:Name="RectColor1" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="26" Margin="19,93,0,0" Stroke="Black" VerticalAlignment="Top" Width="29"/>
-                    <Rectangle x:Name="RectColor1_Copy" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="26" Margin="19,150,0,0" Stroke="Black" VerticalAlignment="Top" Width="29"/>
+                    <Rectangle x:Name="RectColor2" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="26" Margin="19,150,0,0" Stroke="Black" VerticalAlignment="Top" Width="29"/>
                     <Button x:Name="buttonStartGame" Content="Начать игру" Margin="0,0,10,11" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="84"/>
                     <Button x:Name="buttonDisconnectGame" Content="Отключить / отключиться" Margin="10,0,0,10" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="155"/>
                 </Grid>
