--- a/WindowSingle.xaml
+++ b/WindowSingle.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Tic_Tac_Toe_WPF_Remake.WindowSingle"
+﻿<local:WindowBase x:Class="Tic_Tac_Toe_WPF_Remake.WindowSingle"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -43,4 +43,4 @@
         </Grid>
 
     </Grid>
-</Window>
+</local:WindowBase>
